# lazperf-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  build.rs
src/: ffi.rs  lib.rs
tests/: test.rs
